--- a/documents/evans_sample_size_pu.tex
+++ b/documents/evans_sample_size_pu.tex
@@ -110,6 +110,17 @@ Minneapolis, Minnesota, USA\\
 University of Zurich\\
 Zurich, Switzerland
 
+Keywords: Orthopaedics, risk factor, statistics, sample size
+
+No funding was received for this research, and there are no conflicts of
+interest.
+
+Richard Evans contributed to the concept, writing, and simulations in
+this manuscript. Antonio Pozzi contributed to the concept and writing of
+this manuscript.
+
+\newpage
+
 \hypertarget{abstract}{%
 \section{Abstract}\label{abstract}}
 
@@ -117,14 +128,14 @@ Zurich, Switzerland
 \subsection{Objective}\label{objective}}
 
 Sample size calculations play a central role in study design because
-sample size affects study interpretability and costs, hospital
-resources, and staff time. For most orthopaedic risk-factor studies,
-either the sample size calculation or the post-hoc power calculation
-assumes the disease status of control subjects is perfectly ascertained,
-when it may not be. That means control groups may be mixtures of both
-unaffected cases and some unidentified affected cases. Negative control
-groups with misclassified positive data are called unlabeled. Treating
-unlabeled groups as disease-negative control groups is known to cause
+sample size affects study interpretability, costs, hospital resources,
+and staff time. For most orthopaedic risk-factor studies, either the
+sample size calculation or the post-hoc power calculation assumes the
+disease status of control subjects is perfectly ascertained, when it may
+not be. That means control groups may be mixtures of both unaffected
+cases and some unidentified affected cases. Negative control groups with
+misclassified positive data are called unlabeled. Treating unlabeled
+groups as disease-negative control groups is known to cause
 misclassification bias, but there has been little research on how
 misclassification affects the statistical power of risk association
 tests. In this study, we demonstrate the consequences of using unlabeled
@@ -136,8 +147,8 @@ groups may underpower studies. In addition, we offer a range of
 correction factors to adjust sample size calculations back to 80\%
 power.
 
-\hypertarget{materials-and-methods}{%
-\subsection{Materials and Methods}\label{materials-and-methods}}
+\hypertarget{study-design}{%
+\subsection{Study Design}\label{study-design}}
 
 This was a simulation study using study designs from published
 orthopaedic risk-factor studies. The approach was to use their designs
@@ -172,9 +183,10 @@ Keywords: risk-factor, case-control, power, sample size
 
 Sample size calculations play a central role in study design because
 sample size affects study costs, hospital resources, and staff time.
-Also, underpowered studies with Type II error, can be hard to interpret,
-and there are also serious ethical considerations that have little
-chance of success.\cite{ halpern2002continuing, hofmeister2007sample}.
+Also, underpowered studies with Type II errors can be hard to interpret
+and there are also serious ethical considerations for studies that have
+little chance of
+success.\cite{ halpern2002continuing, hofmeister2007sample}.
 
 In orthopaedic risk factor studies, the positive disease status of the
 affected subjects is ascertained with perfect sensitivity and
@@ -277,20 +289,19 @@ power loss described in Aim 1.
 This was a simulation study assessing the changes in the power of a
 univariate association test under different PU conditions. There are
 many statistical tests of association, but we calculated the power for
-one of the most common tests, the Fisher exact test, which is used to
-test the statistical significance of a binary risk factor. More
-generally, this test can be used to assess the significance of any risk
-factor using the predicted values from a univariate logistic regression.
+one of the most common tests, Fisher's exact test, which is used to test
+the statistical significance of a binary risk factor. More generally,
+this test can be used to assess the significance of any risk factor
+using the predicted values from a univariate logistic regression.
 
 In the context of risk association studies, and all else being equal,
-the Fisher exact test would achieve its maximum power for a balanced
-study design when the naive model is correct (i.e., no undetected
-positives in the control group). We call that maximum power the
-reference power and reported our results as both percent power loss
-relative to the reference power and as absolute power loss from
-reference power. In other words, we are using the Fisher exact test to
-show how much statistical power is lost by ignoring the nondetection
-rate.
+Fisher's exact test would achieve its maximum power for a balanced study
+design when the naive model is correct (i.e., no undetected positives in
+the control group). We call that maximum power the reference power and
+reported our results as both percent power loss relative to the
+reference power and as absolute power loss from reference power. In
+other words, we are using Fisher's exact test to show how much
+statistical power might be lost by ignoring the nondetection rate.
 
 \hypertarget{the-sample-size-and-group-imbalance}{%
 \subsection{The Sample Size and Group
@@ -328,7 +339,7 @@ of (50, 150), (150, 50), and (100, 100).
 \subsection{The Simulation Algorithm}\label{the-simulation-algorithm}}
 
 The overall approach is to simulate data, and then use that data to
-calculate the p-value of the Fisher exact test. The process is repeated
+calculate the p-value of Fisher's exact test. The process is repeated
 5000 times for each combination of sample size and nondetection rate,
 and then the 5000 p-values are compared to 0.05. The proportion of
 p-values less than 0.05 is the estimated power.
@@ -342,9 +353,9 @@ risk factor. It was done that way to control the nondetection rate and
 group sizes.
 
 The simulation algorithm is most easily described using examples, and we
-begin with calculating power for the Fisher exact test under the
-reference model, which is 100 cases and 100 correctly labeled (i.e., 100
-truly unaffected) controls. That is, there are no affected cases in the
+begin with calculating power for Fisher's exact test under the reference
+model, which is 100 cases and 100 correctly labeled (i.e., 100 truly
+unaffected) controls. That is, there are no affected cases in the
 control group, so this is not positive-unlabeled data, and the naive
 model is the correct model. Next, we associate a binary risk factor
 variable, \(X\) (e.g., sex), with the cases and controls.The negative
@@ -361,7 +372,7 @@ disease (the baseline is 0.2, and with sex = 1, the risk is double, 0.2
 
 Now, the 200 cases are pairs of binary data, one representing the group
 and the other representing the risk factor. These simulated data were
-tested with the Fisher exact test. As mentioned above, this process was
+tested with Fisher's exact test. As mentioned above, this process was
 repeated 5000 times, and the resulting 5000 p-values used to estimate
 power.
 
@@ -579,7 +590,7 @@ the loss can be extreme.
 
 \newpage
 
-\bibliographystyle{unsrt}
+\bibliographystyle{vancouver}
 
 \bibliography{references}
 
