--- a/documents/revision/evans_sample_size_pu_brief_revision_wrong.rmd
+++ b/documents/revision/evans_sample_size_pu_brief_revision_wrong.rmd
@@ -1,8 +1,7 @@
 ---
 title: "**Sample Size Considerations in the Design of Orthopaedic Risk-factor Studies**"
-output:
-  pdf_document:
-font-size: 12pt
+output: pdf_document
+bibliography: references.bib
 
 ---
 
@@ -67,7 +66,7 @@ Treating unlabeled data as disease-negative only always reduced statistical powe
 
 Researchers should use caution in calculating sample sizes for risk-factor studies and consider adjustments for estimated misclassification rates.
 
-Keywords: risk-factor, case-control, power, sample size
+Keywords: risk-factor, case-control, power, sample size, veterinary orthopaedics
 
 
 \newpage
@@ -86,12 +85,12 @@ As mentioned above, the affected cases are "labeled" positive, but the control d
 
 Using the naive model when the nondetection rate is positive causes misclassification bias (because there are affected cases in the control group), and that bias is well documented in the data science literature.\cite{bd20} Biases due to misclassification can be mitigated using models other than the naive model and with the appropriate data analysis, and there are many articles describing methods for analyzing positive-unlabeled data. Bekker and Davis (2020) provide an excellent summary of methods.\cite{bd20} Sometimes, however, researchers prefer the naive model because the analysis is simpler and they believe their small nondetection rates induce misclassification biases that are too small for practical consideration. There is some suggestion that nondetection rates under 10% do have little impact on bias.\cite{bd20}
 
-But bias in estimates (e.g., bias in regression coefficients) is just one part of the results; the other part is inference (e.g., p-values). Central to inference is the power of statistical tests. Power is used in planning a study as a measure of the ability of the study to make the correct decisions. That is, finding P<0.05 when it should. Typically, 80 percent power means that if the group parameters are truly different, then the statistical test has an 80 percent chance of obtaining p<0.05.
+But bias in estimates (e.g., bias in regression coefficients) is just one part of the results; the other part is inference (e.g., p-values). Central to inference is the power of statistical tests. Power is used in planning a study as a measure of the ability of the study to make the correct decisions. That is, finding P<0.05 when the statistical alternative hypothesis is truly correct. Typically, 80 percent power means that if the group parameters are truly different, then the statistical test has an 80 percent chance of obtaining p<0.05.
 
 During the design phase of risk association studies, researchers might calculate the sample size they need for 80% power assuming the nondetection rate is zero. That is, there are no misclassified affected subjects in the control group. However, if after collection the data are positively unlabeled, then the naive model is incorrect and the estimated power may be less than estimated.
 We investigated the effect of positive-unlabeled data on loss of statistical power under the naive model. For comparison, the reference power is defined as the power when the naive model is correct and the group sizes are balanced. The results are described in terms of power loss relative to the reference power, both percent power loss and absolute power loss. For context, these two quantities are analogous to relative risk and absolute risk from epidemiology.
 
-Using a simulation, we described how statistical power changes with varying proportions of undetected positives in the naive controls, and varying the imbalance between the numbers of cases and naive controls. Our first aim was to demonstrate that the naive analysis of positive-unlabeled data reduces statistical power in risk-factor studies, even for small nondetection rates. Our second aim was to offer correction factors to upward-adjust sample sizes and correct for the power loss described in Aim 1.
+Using a simulation, we described how statistical power changes with varying proportions of undetected positives in the naive controls, and varying the imbalance between the numbers of cases and naive controls. Our first aim was to demonstrate that the naive analysis of positive-unlabeled data reduces statistical power in risk-factor studies, even for small nondetection rates. Our second aim was to offer correction factors to upward-adjust sample sizes and correct for the power loss described in aim one.
 
 # Methods and materials
 
@@ -111,15 +110,17 @@ We modeled group imbalance using Healey et al. (2019), which used 161 dogs affec
 
 ## The Simulation Algorithm
 
-The overall approach is to simulate data, and then use that data to calculate the p-value of Fisher's exact test. The process is repeated 5000 times for each combination of sample size and nondetection rate, and then the 5000 p-values are compared to 0.05. The proportion of p-values less than 0.05 is the estimated power.
+The overall approach was to simulate data, and then use that data to calculate the p-value of Fisher's exact test. The process was repeated 5000 times for each combination of sample size and nondetection rate, and then the 5000 p-values were compared to 0.05. The proportion of p-values less than 0.05 was the estimated power.
 
-Simulating the data works backward from what might be expected. Instead of starting with values for a risk factor (e.g., 200 0's and 1's representing sex) and then simulating their disease status, we start with the disease status (e.g., 50 affected cases and 150 controls with 135 unaffected and 15 affected) and then assign binary values for the risk factor. It was done that way to control the nondetection rate and group sizes.
+Simulating the data worked backward from what might have been expected. Instead of starting with values for a risk factor (e.g., 200 0's and 1's representing sex) and then simulating their disease status, we started with the disease status (e.g., 50 affected cases and 150 controls with 135 unaffected and 15 affected) and then assigned binary values for the risk factor. It was done that way to control the nondetection rate and group sizes.
 
-The simulation algorithm is most easily described using examples, and we begin with calculating power for Fisher's exact test under the reference model, which is 100 cases and 100 correctly labeled (i.e., 100 truly unaffected) controls. That is, there are no affected cases in the control group, so this is not positive-unlabeled data, and the naive model is the correct model. Next, we associate a binary risk factor variable, $X$ (e.g., sex), with the cases and controls.The negative controls were simulated by sampling 100 negative cases from a binomial distribution with $Pr(X=1) = 0.2$. That probability means the the baseline risk for the disease in the population is 0.2. It it was chosen arbitrarily, because the baseline risk isn't central to power, the effect size is. As mentioned above, the effect size was 0.21, so the 100 positive cases were sampled from a binomial distribution with $Pr(X=1) = 0.2 + 0.21$. Using the sex example, that means that having sex=1 predisposes the animals to about double the baseline risk of disease (the baseline is 0.2, and with sex = 1, the risk is double, 0.2 + 0.21 = 0.41.).
+The simulation algorithm was most easily described using examples, and we began by calculating power for Fisher's exact test under the reference model, which was 100 cases and 100 correctly labeled (i.e., 100 truly unaffected) controls. That is, there were no affected cases in the control group, so this was not positive-unlabeled data, and the naive model was the correct model. 
 
-Now, the 200 cases are pairs of binary data, one representing the group and the other representing the risk factor. These simulated data were tested with Fisher's exact test. As mentioned above, this process was repeated 5000 times, and the resulting 5000 p-values used to estimate power.
+Next, we associate a binary risk factor variable, $X$ (e.g., sex), with the cases and controls.The negative controls were simulated by sampling 100 negative cases from a binomial distribution with $Pr(X=1) = 0.2$. That probability means the the baseline risk for the disease in the population is 0.2. It it was chosen arbitrarily, because the baseline risk is not central to power, the effect size is. As mentioned above, the effect size was 0.21, so the 100 positive cases were sampled from a binomial distribution with $Pr(X=1) = 0.2 + 0.21$. Using the sex example, that means that having sex=1 predisposes the animals to about double the baseline risk of disease (the baseline is 0.2, and with sex = 1, the risk is double, 0.2 + 0.21 = 0.41.).
 
-For the second example, we calculate the power for a positive-unlabeled example. Suppose that in a 100-patient control group, 10 percent are in fact undetected positives. So the dataset is 10 affected cases in the control group, 90 unaffected cases in the control group, and 100 affected cases in the positive group. As in the previous example, the risk factor is simulated by sampling from binomial distributions. Now, 90 controls are sampled from the binomial distribution with $Pr(X=1) = 0.2$, the 10 affected controls are sampled from the binomial distribution with $Pr(X=1) = 0.2+ 0.21$, and 100 cases are sampled from the same binomial distribution with $Pr(X=1) = 0.2 + 0.21$. The 10 mislabeled affected cases remain in the control group, so as to measure the effect of treating PU data naively. As before, the simulated data were treated like pilot data, and p-values were calculated. This process is repeated 5000 times and the was estimated as described in the previous example.
+Now, the 200 cases were pairs of binary data, one representing the group and the other representing the risk factor. These simulated data were tested with Fisher's exact test. As mentioned above, this process was repeated 5000 times, and the resulting 5000 p-values used to estimate power.
+
+For the second example, we calculated the power for a positive-unlabeled example. Suppose that in a 100-patient control group, 10 percent are in fact undetected positives. So the dataset was 10 affected cases in the control group, 90 unaffected cases in the control group, and 100 affected cases in the positive group. As in the previous example, the risk factor was simulated by sampling from binomial distributions. Now, 90 controls are sampled from the binomial distribution with $Pr(X=1) = 0.2$, the 10 affected controls are sampled from the binomial distribution with $Pr(X=1) = 0.2+ 0.21$, and 100 cases are sampled from the same binomial distribution with $Pr(X=1) = 0.2 + 0.21$. The 10 mislabeled affected cases remained in the control group, so as to measure the effect of treating PU data naively. As before, the simulated data were treated like pilot data, and p-values were calculated. This process is repeated 5000 times and the power was estimated as described in the previous example.
 
 ## The Correction Factor
 
@@ -193,9 +194,9 @@ kable(tab2,
 
 This study showed that under specific conditions there was modest power loss even for relatively small proportions of undetected positives in the control group. That means that risk-factor studies may have lower than expected power, and therefore increased chance of Type II error. It is important to note that changes in power may affect more than power. For example, in Table 1, rows 1 to 3, absolute power dropped from 0.82 (row 1) to 0.73 (row 3). It would take about 20 additional subjects to reach the reference power (using Table 2). If subjects were very expensive, then the apparently small drop in power (0.09) is actually large in terms of cost. On the other hand, for an exploratory retrospective study, a 0.09 (9%) power drop may not be considered much.
 
-The working examples were from GWAS studies, but the simulation results apply to any kind of study with univariate association tests, such as any risk factor study. That is a broad class of studies. Examples include the univariate associations between post-op surgical infections and various surgical conditions (e.g., boarded surgeon vs. resident, manufacturer of bone plates). In that case, there may be subdiagnostic infections in the control group. Another example is univariate association tests in veterinary surveys.
+The working examples were from genome-wide association studies, but the simulation results apply to any kind of study with univariate association tests, such as any risk factor study. That is a broad class of studies. Examples include the univariate associations between post-op surgical infections and various surgical conditions (e.g., boarded surgeon vs. resident, manufacturer of bone plates). In that case, there may be subdiagnostic infections in the control group. Another example is univariate association tests in veterinary surveys.
 
-In this simulation, the undetected positives in the negative group were randomly sampled from the same population as the detected positives in the affected group. That's a common assumption, but there are other models. In one such model, the undetected positives in the control group might be a subpopulation of positives defined by another variable. For example, in a CCLD GWAS study, the undetected positives in the control group might be positive dogs with low body condition scores. We did not explore those kinds of models in this research. Our goal was to find some examples to show that for some studies, misclassified data may cause power loss. When that power loss is combined with unbalanced data, the loss can be extreme.
+In this simulation, the undetected positives in the negative group were randomly sampled from the same population as the detected positives in the affected group. That is a common assumption, but there are other models. In one such model, the undetected positives in the control group might be a subpopulation of positives defined by another variable. For example, in a CCLD GWAS study, the undetected positives in the control group might be positive dogs with low body condition scores. We did not explore those kinds of models in this simulation. Our goal was to find some examples to show that for some studies, misclassified data may cause power loss. When that power loss is combined with unbalanced data, the loss can be extreme. For risk-factor studies, researchers should first consider using positive-unlabeled data analysis methods, but if that is not possible, then caution should be used in calculating sample sizes for risk-factor studies.
 
 
 
